<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F8F8F8">
            <ImageView
                android:id="@+id/imgSong"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginStart="@dimen/cardview_margin_start"
                android:layout_marginTop="@dimen/cardview_margin_top"
                android:layout_marginBottom="@dimen/cardview_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat = "@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_margin_start"
                android:layout_marginTop="@dimen/cardview_margin_top"
                android:text="@string/cardview_song_name"
                android:textColor="@color/song_items"
                app:layout_constraintStart_toEndOf="@+id/imgSong"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cardview_song_name_sample"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf ="@+id/txtView"
                app:layout_constraintTop_toBottomOf="@+id/txtView"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cardview_song_album"
                android:textColor="@color/song_items"
                app:layout_constraintStart_toStartOf ="@+id/txtName"
                app:layout_constraintTop_toBottomOf="@+id/txtName"  />
            <TextView
                android:id="@+id/txtAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cardview_song_album_sample"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf ="@+id/textView3"
                app:layout_constraintTop_toBottomOf ="@+id/textView3" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cardview_song_year"
                android:textColor="@color/song_items"
                app:layout_constraintStart_toStartOf ="@+id/txtAlbum"
                app:layout_constraintTop_toBottomOf="@+id/txtAlbum"  />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin_top"
                android:text="@string/cardview_song_year_sample"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>